--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,16 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1",
-        "illuminate/support": "^8.0|^9.0",
+        "php": ">=8.1",
+        "illuminate/support": "^9.0|^10.0",
+        "laravel/pint": "^1.7",
         "league/commonmark": "^2.2",
         "symfony/css-selector": "^6.0",
         "symfony/dom-crawler": "^6.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.2",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
