--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "illuminate/support": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0|^11.0",
         "laravel/pint": "^1.7",
         "league/commonmark": "^2.2",
         "symfony/css-selector": "^6.0",
