--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "illuminate/support": "^9.0|^10.0|^11.0",
+        "illuminate/support": "^11.0|^12.0",
         "league/commonmark": "^2.2",
         "symfony/css-selector": "^6.0|^7.0",
         "symfony/dom-crawler": "^6.0|^7.0"
